flink/flink-operator-service-headless.yaml
kind: Service
apiVersion: v1
metadata:
  name: flink-operator-service-headless
  namespace: flink
spec:
  ports:
    - name: metrics
      protocol: TCP
      appProtocol: tcp
      port: 9999
      targetPort: 9999
  selector:
    app.kubernetes.io/name: flink-kubernetes-operator
  clusterIP: None
